# rust-template

./: Cargo.toml  rustfmt.toml
.cargo-husky/hooks/: pre-commit  pre-push
src/: main.rs
