# [workspace]
# members = ["crates/*"]

[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]